5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1712_2499.log
== TEST (2019-05-11 14:08:07) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i<k):
	soma = soma + 1 + (1/factorial(k))
	

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:10:37) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i<k):
	soma = soma + (1 + (1/factorial(k)))
	x = round(soma, 8)
	print(x)

-- OUTPUT:
1.00019841
2.00039683
3.00059524
4.00079365
5.00099206
6.00119048
7.00138889
8.0015873
9.00178571
10.00198413
11.00218254
12.00238095
13.00257937
14.00277778
15.00297619
16.0031746
17.00337302
18.00357143
19.00376984
20.00396825
21.00416667
22.00436508
23.00456349
24.0047619
25.00496032
26.00515873
27.00535714
28.00555556
29.00575397
30.00595238
31.00615079
32.00634921
33.00654762
34.00674603
35.00694444
36.00714286
37.00734127
38.00753968
39.0077381
40.00793651
41.00813492
42.00833333
43.00853175
44.00873016
45.00892857
46.00912698
47.0093254
48.00952381
49.00972222
50.00992063
51.01011905
52.01031746
53.01051587
54.01071429
55.0109127
56.01111111
57.01130952
58.01150794
59.01170635
60.01190476
61.01210317
62.01230159
63.0125
64.01269841
65.01289683
66.01309524
67.01329365
68.01349206
69.01369048
70.01388889
71.0140873
72.01428571
73.01448413
74.01468254
75.01488095
76.01507937
77.01527778
78.01547619
79.0156746
80.01587302
81.01607143
82.01626984
83.01646825
84.01666667
85.01686508
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:19:02) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i<k):
	soma = soma + 1 + (1**i/(factorial(k)))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- OUTPUT:
1.00019841
2.00039683
3.00059524
4.00079365
5.00099206
6.00119048
7.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:20:19) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i<k):
	soma = soma + (1**i/(factorial(k)))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- OUTPUT:
0.00019841
0.00039683
0.00059524
0.00079365
0.00099206
0.00119048
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:20:52) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i<k):
	soma = soma + (1 + (1**i/(factorial(k))))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- OUTPUT:
1.00019841
2.00039683
3.00059524
4.00079365
5.00099206
6.00119048
7.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:23:13) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i<k):
	soma = soma + (1 + (1**i/(factorial(k) + i)))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- OUTPUT:
1.00019841
2.00039679
3.00059512
4.00079341
5.00099167
6.00118989
7.00138806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:23:59) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i<k):
	soma = soma + (1 + (1**i/(factorial(k) + i)))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- OUTPUT:
1.00019841
2.00039679
3.00059512
4.00079341
5.00099167
6.00118989
7.00138806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:24:39) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i=k):
	soma = soma + (1 + (1**i/(factorial(k) + i)))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- ERROR:
File "XXXX", line 8
    while(i=k):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:24:51) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i = k):
	soma = soma + (1 + (1**i/(factorial(k) + i)))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- ERROR:
File "XXXX", line 8
    while(i = k):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:24:57) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i = k):
	soma = soma + (1 + (1**i/(factorial(k) + i)))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- ERROR:
File "XXXX", line 8
    while(i = k):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:25:27) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i = k):
	soma = soma + (1 + (1**i/(factorial(k) + i)))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- ERROR:
File "XXXX", line 8
    while(i = k):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:26:27) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i = k):
	soma = soma + (1 + (1**i/(factorial(k) + i)))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- ERROR:
File "XXXX", line 8
    while(i = k):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:27:32) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i <= k):
	soma = soma + (1 + (1**i/(factorial(k) + i)))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- OUTPUT:
1.00019841
2.00039679
3.00059512
4.00079341
5.00099167
6.00118989
7.00138806
8.0015862
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:29:30) 
-- CODE:
from math import *
k = int(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i <= k):
	soma = soma + (1 + (1**i/(factorial(k) + i)))
	i = i + 1
	x = round(soma, 8)
	print(x)

-- OUTPUT:
1.00019841
2.00039679
3.00059512
4.00079341
5.00099167
6.00118989
7.00138806
8.0015862
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:21:35) 
-- CODE:
from math import *
k = float(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i < k):
	soma = soma + (1/factorial(i)
	i = i + 1
print(round(soma, 8)

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:22:19) 
-- CODE:
from math import *
k = float(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i < k):
	soma = soma + (1 / factorial(i)
	i = i +1
print(round(soma, 8)

-- ERROR:
File "XXXX", line 10
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:22:31) 
-- CODE:
from math import *
k = float(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i < k):
	soma = soma + (1 / factorial(i)
	i = i +1
print(round(soma, 8))

-- ERROR:
File "XXXX", line 10
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:23:10) 
-- CODE:
from math import *
k = float(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i < k):
	soma = soma + (1 / factorial(i))
	i = i + 1
print(round(soma, 8))

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:23:21) 
-- CODE:
from math import *
k = float(input("k:"))

# Valores iniciais
soma = 0 #acumuladora
i 	  = 0 #contadora

while(i < k):
	soma = soma + (1 / factorial(i))
	i = i + 1
print(round(soma, 8))

-- EXECUTION TIME:
0.125504
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:02:53) 
-- CODE:
from math import *
k = float(input(":"))

soma = 0
i = 0

while(i < k):
	soma = soma + (1/factorial(i))
	i = i + 1
print(round(soma,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:03:02) 
-- CODE:
from math import *
k = float(input(":"))

soma = 0
i = 0

while(i < k):
	soma = soma + (1/factorial(i))
	i = i + 1
print(round(soma,8))
-- EXECUTION TIME:
0.134523
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
